--- a/Resources/translations/universal_discovery_widget.en.xliff
+++ b/Resources/translations/universal_discovery_widget.en.xliff
@@ -6,200 +6,165 @@
       <note>The source node in most cases contains the sample message as written by the developer. If it looks like a dot-delimitted string such as "form.label.firstname", then the developer has not provided a default message.</note>
     </header>
     <body>
-      <trans-unit id="0b27a32b6a1d59164f8f3f899f5bb1e1632ea13c" resname="bookmarks.tab.label">
+      <trans-unit id="c88355e5be31353761adbfb5bd8dd3f4c6a61a27" resname="bookmarks.label">
         <source>Bookmarks</source>
         <target state="new">Bookmarks</target>
-        <note>key: bookmarks.tab.label</note>
+        <note>key: bookmarks.label</note>
       </trans-unit>
-      <trans-unit id="d60a9f5151198e2d342a7706a87cc94c6b99df0b" resname="bookmarks_table.no_bookmarks.message">
-        <source>You have no bookmarks yet. Your bookmarks will show up here.</source>
-        <target state="new">You have no bookmarks yet. Your bookmarks will show up here.</target>
-        <note>key: bookmarks_table.no_bookmarks.message</note>
-      </trans-unit>
-      <trans-unit id="ff5d293e5499e24b93cc23c8c41eb68c3762479c" resname="bookmarks_table.title">
-        <source>Bookmarks</source>
-        <target state="new">Bookmarks</target>
-        <note>key: bookmarks_table.title</note>
-      </trans-unit>
-      <trans-unit id="2921f779fd4005262284393eba6ddc0a458c2f7b" resname="browse.tab.label">
+      <trans-unit id="d88e188b21fc4c65a6d8bdf170e0e23dfe0712a3" resname="browse.label">
         <source>Browse</source>
         <target state="new">Browse</target>
-        <note>key: browse.tab.label</note>
+        <note>key: browse.label</note>
       </trans-unit>
-      <trans-unit id="ba10e05f0dd0a4ddd591d79b498616594637a854" resname="cancel.label">
-        <source>Cancel</source>
-        <target state="new">Cancel</target>
-        <note>key: cancel.label</note>
+      <trans-unit id="6597ed9c77295271a62deaf86cddcab2a332af8d" resname="content_create.label">
+        <source>Content create</source>
+        <target state="new">Content create</target>
+        <note>key: content_create.label</note>
       </trans-unit>
-      <trans-unit id="7a0ef5e28c76e86c44ddc4be01796aeb86a0b69d" resname="confirm.label">
-        <source>Confirm</source>
-        <target state="new">Confirm</target>
-        <note>key: confirm.label</note>
-      </trans-unit>
-      <trans-unit id="e9a888525e3ce94bba2f9338397737bf1fb22b09" resname="content_meta_preview.creation_date.label">
-        <source>Creation date</source>
-        <target state="new">Creation date</target>
-        <note>key: content_meta_preview.creation_date.label</note>
-      </trans-unit>
-      <trans-unit id="85001327f4bcfe4aeeef01b6a2a30dddbc7b8bf5" resname="content_meta_preview.image_preview_not_available.info">
-        <source>Content preview is not available</source>
-        <target state="new">Content preview is not available</target>
-        <note>key: content_meta_preview.image_preview_not_available.info</note>
-      </trans-unit>
-      <trans-unit id="cccd1a21d1f34d69f0e43773a7a67552996bf858" resname="content_meta_preview.last_modified.label">
-        <source>Last modified</source>
-        <target state="new">Last modified</target>
-        <note>key: content_meta_preview.last_modified.label</note>
-      </trans-unit>
-      <trans-unit id="2faa37c3b3ca4cb7dff16ef157fd9a4ca4858f5b" resname="content_meta_preview.title">
-        <source>Content metadata</source>
-        <target state="new">Content metadata</target>
-        <note>key: content_meta_preview.title</note>
-      </trans-unit>
-      <trans-unit id="9d3c056b12ea03758e481bff87db4abd3f631938" resname="content_meta_preview.translations.label">
-        <source>Translations</source>
-        <target state="new">Translations</target>
-        <note>key: content_meta_preview.translations.label</note>
-      </trans-unit>
-      <trans-unit id="c6b0a2b3a3cefe1deff4a144c540b0189f7b536a" resname="content_on_the_fly.choose_language_and_content_type.title">
-        <source>Choose language and Content Type</source>
-        <target state="new">Choose language and Content Type</target>
-        <note>key: content_on_the_fly.choose_language_and_content_type.title</note>
-      </trans-unit>
-      <trans-unit id="b8f784350c5bed6122168889767a2fb6595b76f3" resname="content_on_the_fly.create_content.label">
-        <source>Create content</source>
-        <target state="new">Create content</target>
-        <note>key: content_on_the_fly.create_content.label</note>
-      </trans-unit>
-      <trans-unit id="3175cbfd789bf52f1924443c64ed542f2965f410" resname="content_on_the_fly.creating_content.title">
-        <source>Creating a(n) %contentTypeName% in %languageName%</source>
-        <target state="new">Creating a(n) %contentTypeName% in %languageName%</target>
-        <note>key: content_on_the_fly.creating_content.title</note>
-      </trans-unit>
-      <trans-unit id="b540f7e368b0536dff94f8ae6a003fbccc16ebc0" resname="content_on_the_fly.location_not_allowed.message">
-        <source>This Location is not selectable.</source>
-        <target state="new">This Location is not selectable.</target>
-        <note>key: content_on_the_fly.location_not_allowed.message</note>
-      </trans-unit>
-      <trans-unit id="326dd4779000122d000366eff63ad02a71d11e6e" resname="content_on_the_fly.no_permission.message">
-        <source>You don't have permission for this action. Contact your Administrator.</source>
-        <target state="new">You don't have permission for this action. Contact your Administrator.</target>
-        <note>key: content_on_the_fly.no_permission.message</note>
-      </trans-unit>
-      <trans-unit id="e697d887ff644fe0e7dab46d7af3e319fd452988" resname="content_on_the_fly.publish.label">
-        <source>Publish</source>
-        <target state="new">Publish</target>
-        <note>key: content_on_the_fly.publish.label</note>
-      </trans-unit>
-      <trans-unit id="05dae994ac8cfc7ad1c0753d03d9549fc81d7431" resname="content_on_the_fly.select_a_content_type.title">
-        <source>Select a Content Type</source>
-        <target state="new">Select a Content Type</target>
-        <note>key: content_on_the_fly.select_a_content_type.title</note>
-      </trans-unit>
-      <trans-unit id="f695b36207b8d98ee23a94851a6f12104c96cb79" resname="content_on_the_fly.select_language.title">
-        <source>Select a language</source>
-        <target state="new">Select a language</target>
-        <note>key: content_on_the_fly.select_language.title</note>
-      </trans-unit>
-      <trans-unit id="29b3651d232c9e47eb5d2e2fd6a2e8979599d6c9" resname="content_on_the_fly.select_location.title">
-        <source>Select Location</source>
-        <target state="new">Select Location</target>
-        <note>key: content_on_the_fly.select_location.title</note>
-      </trans-unit>
-      <trans-unit id="f6781adbd133acf94a3f18f91af23dcdd987c956" resname="content_on_the_fly.type_to_refine.placeholder">
-        <source>Type to refine</source>
-        <target state="new">Type to refine</target>
-        <note>key: content_on_the_fly.type_to_refine.placeholder</note>
-      </trans-unit>
-      <trans-unit id="253d33be3e05fdfc7eccdf76261790437394e4d2" resname="content_table.header.name">
-        <source>Name</source>
-        <target state="new">Name</target>
-        <note>key: content_table.header.name</note>
-      </trans-unit>
-      <trans-unit id="784e9e0e0671803d9d58b430f0e9ffa9c721740d" resname="content_table.header.type">
+      <trans-unit id="e1846286e48b0f692a8f01be6ae81a95ebb68595" resname="content_table.content_type">
         <source>Content Type</source>
         <target state="new">Content Type</target>
-        <note>key: content_table.header.type</note>
+        <note>key: content_table.content_type</note>
       </trans-unit>
-      <trans-unit id="02d2ca49d119841871e55720557c6f9440415954" resname="content_table.not_available.label">
-        <source>N/A</source>
-        <target state="new">N/A</target>
-        <note>key: content_table.not_available.label</note>
+      <trans-unit id="d32da00d9a92ccbbe0c7e5c9ae7fb8a68491929a" resname="content_table.modified">
+        <source>Modified</source>
+        <target state="new">Modified</target>
+        <note>key: content_table.modified</note>
       </trans-unit>
-      <trans-unit id="6ea767d3b737c5c2c231b63217de8435910e937e" resname="create.tab.label">
+      <trans-unit id="0e9a03ed22a841aba266eea024921b38ccc22688" resname="content_table.name">
+        <source>Name</source>
+        <target state="new">Name</target>
+        <note>key: content_table.name</note>
+      </trans-unit>
+      <trans-unit id="a7d7c06aff739180272f50e51f2100e7b5d9cfbf" resname="create_content.create">
         <source>Create</source>
         <target state="new">Create</target>
-        <note>key: create.tab.label</note>
+        <note>key: create_content.create</note>
       </trans-unit>
-      <trans-unit id="d86d902111c34942fc1254a5dee0ef199dc41789" resname="finder.branch.load_more.label">
-        <source>Load more</source>
-        <target state="new">Load more</target>
-        <note>key: finder.branch.load_more.label</note>
+      <trans-unit id="23fa7d97ea65916659849b0ed9b1e148df62fd08" resname="create_content.label">
+        <source>Create new content</source>
+        <target state="new">Create new content</target>
+        <note>key: create_content.label</note>
       </trans-unit>
-      <trans-unit id="fa6baf070f27f737433a162bd6411f4a216d46c0" resname="pagination.first">
-        <source>First</source>
-        <target state="new">First</target>
-        <note>key: pagination.first</note>
+      <trans-unit id="61059b2a945e7873b9ff9a72bd164d8ae001ccd4" resname="create_content.select_content_type">
+        <source>Select a Content Type</source>
+        <target state="new">Select a Content Type</target>
+        <note>key: create_content.select_content_type</note>
       </trans-unit>
-      <trans-unit id="9f1c3d547b936fef392eab4a6695633e20a1ee2a" resname="pagination.last">
-        <source>Last</source>
-        <target state="new">Last</target>
-        <note>key: pagination.last</note>
+      <trans-unit id="620f985461da78639f600259b95ebd3cdf2d9ed2" resname="create_content.select_language">
+        <source>Select a language</source>
+        <target state="new">Select a language</target>
+        <note>key: create_content.select_language</note>
       </trans-unit>
-      <trans-unit id="b10157de76c0f57fa166904d97c06336e10559ca" resname="pagination.next">
-        <source>Next</source>
-        <target state="new">Next</target>
-        <note>key: pagination.next</note>
+      <trans-unit id="8616b7656ef9370ffa5e42c399e615eaccccb00c" resname="filters.any_section">
+        <source>Any section</source>
+        <target state="new">Any section</target>
+        <note>key: filters.any_section</note>
       </trans-unit>
-      <trans-unit id="9f2c01cd700699f4a4303156c9a0bafddef8e36b" resname="pagination.prev">
-        <source>Previous</source>
-        <target state="new">Previous</target>
-        <note>key: pagination.prev</note>
+      <trans-unit id="b01a58cb9736974403f9f94ecce5180fb95a9627" resname="filters.apply">
+        <source>Apply</source>
+        <target state="new">Apply</target>
+        <note>key: filters.apply</note>
+      </trans-unit>
+      <trans-unit id="561bc96ad77fbf519000d0fa5e170d01b10c3de9" resname="filters.clear">
+        <source>Clear</source>
+        <target state="new">Clear</target>
+        <note>key: filters.clear</note>
+      </trans-unit>
+      <trans-unit id="906871e66216a97a8033d2e86819150c141cb92a" resname="filters.content_type">
+        <source>Content Type</source>
+        <target state="new">Content Type</target>
+        <note>key: filters.content_type</note>
+      </trans-unit>
+      <trans-unit id="15135a98864ffb3f0f889577ad962bf3817fea6f" resname="filters.section">
+        <source>Section</source>
+        <target state="new">Section</target>
+        <note>key: filters.section</note>
+      </trans-unit>
+      <trans-unit id="27c9036e2e5a73db48d6638af9920950fd76b419" resname="filters.subtree">
+        <source>Subtree</source>
+        <target state="new">Subtree</target>
+        <note>key: filters.subtree</note>
+      </trans-unit>
+      <trans-unit id="5e42fe3d48d64c1c9a735ac6286d3b0c06a008a0" resname="meta_preview.creation_date">
+        <source>Creation Date</source>
+        <target state="new">Creation Date</target>
+        <note>key: meta_preview.creation_date</note>
+      </trans-unit>
+      <trans-unit id="4828dcbcd9cf2ad9c2b69a9b9420c94eccbe5dcc" resname="meta_preview.edit_translation">
+        <source>Edit translation</source>
+        <target state="new">Edit translation</target>
+        <note>key: meta_preview.edit_translation</note>
+      </trans-unit>
+      <trans-unit id="954055c80d86d18a4b101c2060e4dd63dd10971f" resname="meta_preview.last_modified">
+        <source>Last Modified</source>
+        <target state="new">Last Modified</target>
+        <note>key: meta_preview.last_modified</note>
+      </trans-unit>
+      <trans-unit id="18595eab7f455b6e3267de1bd018011b8126ab97" resname="meta_preview.translations">
+        <source>Translations</source>
+        <target state="new">Translations</target>
+        <note>key: meta_preview.translations</note>
       </trans-unit>
       <trans-unit id="fde645e6790429ce2f904099b7aa2712224be9aa" resname="popup.close.label">
         <source>Close</source>
         <target state="new">Close</target>
         <note>key: popup.close.label</note>
       </trans-unit>
-      <trans-unit id="446c59c15f6d865a1d0ddd1c86711a7fc276cbb8" resname="search.content_table.title">
+      <trans-unit id="007b9245e1a34e3ea3515ebe69767f07379edcae" resname="search.check_spelling">
+        <source>Check spelling of keywords.</source>
+        <target state="new">Check spelling of keywords.</target>
+        <note>key: search.check_spelling</note>
+      </trans-unit>
+      <trans-unit id="536d54d0a1d9dffd70df6d5d9e1b32d6e99fdbb3" resname="search.different_keywords">
+        <source>Try different keywords.</source>
+        <target state="new">Try different keywords.</target>
+        <note>key: search.different_keywords</note>
+      </trans-unit>
+      <trans-unit id="fa40054e85b4179a9351672f51d70044a0de2741" resname="search.fewer_keywords">
+        <source>Try fewer keywords. Reducing keywords result in more matches.</source>
+        <target state="new">Try fewer keywords. Reducing keywords result in more matches.</target>
+        <note>key: search.fewer_keywords</note>
+      </trans-unit>
+      <trans-unit id="5ab8b9fc463113f18cb6826034b6ef21342bb73d" resname="search.label">
+        <source>Search</source>
+        <target state="new">Search</target>
+        <note>key: search.label</note>
+      </trans-unit>
+      <trans-unit id="9fade0c452653d162e3689cd888c984ac34b3b2b" resname="search.more_general">
+        <source>Try more general keywords.</source>
+        <target state="new">Try more general keywords.</target>
+        <note>key: search.more_general</note>
+      </trans-unit>
+      <trans-unit id="8a3a6b538d81237dcb9533496c691a7685e456de" resname="search.no_results">
+        <source>Sorry, no results were found for</source>
+        <target state="new">Sorry, no results were found for</target>
+        <note>key: search.no_results</note>
+      </trans-unit>
+      <trans-unit id="69f8e58ee01f604b377aaa638cabe3f245b45a73" resname="search.search_results">
         <source>Search results</source>
         <target state="new">Search results</target>
-        <note>key: search.content_table.title</note>
+        <note>key: search.search_results</note>
       </trans-unit>
-      <trans-unit id="01a91a8c8a743958bf64a1c53868927062725a76" resname="search.submit.label">
-        <source>Search</source>
-        <target state="new">Search</target>
-        <note>key: search.submit.label</note>
+      <trans-unit id="3d38ca81487735c8b506fb4523e02256fd8821b1" resname="search.tips">
+        <source>Some helpful search tips</source>
+        <target state="new">Some helpful search tips</target>
+        <note>key: search.tips</note>
       </trans-unit>
-      <trans-unit id="608c50a43afa7c8772d6be56a7c523264159e00d" resname="search.tab.label">
-        <source>Search</source>
-        <target state="new">Search</target>
-        <note>key: search.tab.label</note>
+      <trans-unit id="49f1cbcf4bdd5ba51b7f17dc8dfe93d95cbd4795" resname="selected_locations.selected">
+        <source>selected</source>
+        <target state="new">selected</target>
+        <note>key: selected_locations.selected</note>
       </trans-unit>
-      <trans-unit id="305cf135ac8fa91d9cf166e883741ea8cb801db3" resname="search.title">
-        <source>Search</source>
-        <target state="new">Search</target>
-        <note>key: search.title</note>
+      <trans-unit id="6b02292efbef3c6800f618acb3c41f968d9ea305" resname="sorting.date.label">
+        <source>Date</source>
+        <target state="new">Date</target>
+        <note>key: sorting.date.label</note>
       </trans-unit>
-      <trans-unit id="0d754c552d7d2ac3880692ff18a1ba58ae28cb3f" resname="select_content.confirmed_items.title">
-        <source>Selected items</source>
-        <target state="new">Selected items</target>
-        <note>key: select_content.confirmed_items.title</note>
-      </trans-unit>
-      <trans-unit id="86535815d7e1e8cfb646988cd6049bbf3f2ab4e9" resname="select_content.limit.label">
-        <source>Limit %items% max</source>
-        <target state="new">Limit %items% max</target>
-        <note>key: select_content.limit.label</note>
-      </trans-unit>
-      <trans-unit id="7f49fb26a42bf2c8f67a41c45c1871edf5f75ec7" resname="select_content.no_confirmed_content.title">
-        <source>No content selected</source>
-        <target state="new">No content selected</target>
-        <note>key: select_content.no_confirmed_content.title</note>
-      </trans-unit>
-      <trans-unit id="1ca7c6075ce2a6c2a9f9657526bde3d21e4e51a3" resname="select_content.not_available.label">
-        <source>N/A</source>
-        <target state="new">N/A</target>
-        <note>key: select_content.not_available.label</note>
+      <trans-unit id="c06c6d1c4592ee395e16fc267b514ee167146886" resname="sorting.name.label">
+        <source>Name</source>
+        <target state="new">Name</target>
+        <note>key: sorting.name.label</note>
       </trans-unit>
     </body>
   </file>
